server/example_configurations/access_control/Basyx-python-sdk_servers_with_access_control/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: ingress_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: secured_basyx_stack
                  virtual_hosts:
                    - name: secured_basyx_stack
                      domains:
                        - "*"
                      routes:
                        - match:
                            path: "/"
                          redirect:
                            path_redirect: "/ui/"
                        - match:
                            prefix: "/ui"
                          route:
                            cluster: aas-web-ui
                            timeout: 30s
                        - match:
                            prefix: "/repository/"
                          route:
                            cluster: repository
                            timeout: 30s
                        - match:
                            prefix: "/registry/"
                          route:
                            cluster: registry
                            timeout: 30s
                        - match:
                            prefix: "/discovery/"
                          route:
                            cluster: discovery
                            timeout: 30s
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak:
                          issuer: http://localhost:8080/realms/basyx-secured-stack
                          audiences:
                            - basyx-web-ui
                          remote_jwks:
                            http_uri:
                              uri: http://keycloak:8080/realms/basyx-secured-stack/protocol/openid-connect/certs
                              cluster: keycloak
                              timeout: 5s
                            cache_duration:
                              seconds: 300
                          forward: true
                          payload_in_metadata: jwt_payload
                      rules:
                        - match:
                            prefix: "/repository/"
                          requires:
                            provider_name: keycloak
                        - match:
                            prefix: "/registry/"
                          requires:
                            provider_name: keycloak
                        - match:
                            prefix: "/discovery/"
                          requires:
                            provider_name: keycloak
                        - match:
                            prefix: "/"
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      metadata_context_namespaces:
                        - envoy.filters.http.jwt_authn
                      grpc_service:
                        envoy_grpc:
                          cluster_name: opa-envoy
                        timeout: 2s
                      status_on_error:
                        code: ServiceUnavailable
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: aas-web-ui
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: aas-web-ui
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: aas-web-ui
                      port_value: 3000

    - name: repository
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: repository
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: repository
                      port_value: 80

    - name: registry
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: registry
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: registry
                      port_value: 80

    - name: discovery
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: discovery
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: discovery
                      port_value: 80

    - name: keycloak
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080

    - name: opa-envoy
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: opa-envoy
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa-envoy
                      port_value: 9191
